# PocketBook-GoogleDriveSync

./: .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config.toml
auth-wizard/: Cargo.toml
auth-wizard/src/: main.rs
libs/gdrive-api/: Cargo.toml
libs/gdrive-api/src/: auth.rs  config.rs  error.rs  json.rs  lib.rs
libs/inkview/: Cargo.toml
libs/inkview/src/: lib.rs  sys.rs
libs/sys-stubs/: Cargo.toml
libs/sys-stubs/src/: lib.rs
sync-app/: Cargo.toml  build.sh  ldwrap.sh
sync-app/.cargo/: config.toml
sync-app/src/: main.rs
