[package]
name = "sync-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdrive-api = { path = "../libs/gdrive-api" }
inkview = { path = "../libs/inkview" }
sys-stubs = { path = "../libs/sys-stubs" }

[profile.release]
panic="abort"
strip="symbols"
